# stock-recomendation-engine

./: .env.example  .gitignore  CLAUDE.md  LICENCE  PRD.md  PRD_v1.md  PRD_v2.md  README.md  TODO.md  pyproject.toml
config/: api.example.yaml  data.example.yaml  llm.example.yaml  news.example.yaml  portfolio.example.yaml  processing.example.yaml
config/symbols/: nifty50.txt
scripts/: backfill.py  backtest.py  full_report.py  optimize_weights.py  run_pipeline.py  setup_db.py
src/: config.py
src/api/: __init__.py  app.py  dependencies.py  errors.py  middleware.py
src/api/routers/: __init__.py  analysis.py  chat.py  news.py  portfolio.py  reports.py  stocks.py  system.py  (+1 more)
src/contracts/: __init__.py  api.py  chat.py  data.py  llm.py  news.py  portfolio.py  processing.py  watchlist.py
src/data/: __init__.py  service.py
src/llm/: __init__.py  render.py  service.py
src/news/: __init__.py  dedup.py  service.py
src/processing/: __init__.py  features.py  scoring.py  service.py  signals.py
src/scheduler/: __init__.py  jobs.py
tests/: conftest.py
tests/backtesting/: __init__.py  harness.py  test_backtest.py
tests/integration/: test_api_endpoints.py  test_data_pipeline.py  test_llm_pipeline.py  test_news_pipeline.py  test_processing_pipeline.py
tests/unit/: _llm_fixtures.py  test_config.py  test_data_service.py  test_dedup.py  test_indicators.py  test_llm_openrouter.py  test_llm_prompt.py  test_llm_service.py  test_recommendation.py  test_repository.py  test_scoring.py  test_sentiment.py  test_signals.py  test_watchlist_repo.py
ui/: .eslintrc.cjs  .gitignore  CLEAN_UI_UX.md  PHASES.md  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
ui/src/: main.tsx  router.tsx
(+134 files in other folders)
